// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Profile Constants should 1`] = `
{
  "aliases": [
    "e",
  ],
  "allowableValues": {
    "values": [
      "RACF",
      "TSS",
      "ACF2",
    ],
  },
  "description": "The ESM product on the target system",
  "group": "IDF Connection Options",
  "name": "esm",
  "type": "string",
}
`;

exports[`Profile Constants should 2`] = `
{
  "aliases": [
    "l",
  ],
  "description": "The target JES system on which the command will be executed",
  "group": "IDF Connection Options",
  "name": "system",
  "type": "string",
}
`;

exports[`Profile Constants should 3`] = `
{
  "aliases": [
    "r",
  ],
  "description": "The distributed identities registry",
  "group": "IDF Connection Options",
  "name": "registry",
  "type": "string",
}
`;

exports[`Profile Constants should 4`] = `"IDF Connection Options"`;

exports[`Profile Constants should 5`] = `
[
  {
    "aliases": [
      "e",
    ],
    "allowableValues": {
      "values": [
        "RACF",
        "TSS",
        "ACF2",
      ],
    },
    "description": "The ESM product on the target system",
    "group": "IDF Connection Options",
    "name": "esm",
    "type": "string",
  },
  {
    "aliases": [
      "l",
    ],
    "description": "The target JES system on which the command will be executed",
    "group": "IDF Connection Options",
    "name": "system",
    "type": "string",
  },
  {
    "aliases": [
      "r",
    ],
    "description": "The distributed identities registry",
    "group": "IDF Connection Options",
    "name": "registry",
    "type": "string",
  },
]
`;

exports[`Profile Constants should return correct values for all the constants 1`] = `
{
  "aliases": [
    "e",
  ],
  "allowableValues": {
    "values": [
      "RACF",
      "TSS",
      "ACF2",
    ],
  },
  "description": "The ESM product on the target system",
  "group": "IDF Connection Options",
  "name": "esm",
  "type": "string",
}
`;

exports[`Profile Constants should return correct values for all the constants 2`] = `
{
  "aliases": [
    "l",
  ],
  "description": "The target JES system on which the command will be executed",
  "group": "IDF Connection Options",
  "name": "system",
  "type": "string",
}
`;

exports[`Profile Constants should return correct values for all the constants 3`] = `
{
  "aliases": [
    "r",
  ],
  "description": "The distributed identities registry",
  "group": "IDF Connection Options",
  "name": "registry",
  "type": "string",
}
`;

exports[`Profile Constants should return correct values for all the constants 4`] = `"IDF Connection Options"`;

exports[`Profile Constants should return correct values for all the constants 5`] = `
[
  {
    "aliases": [
      "e",
    ],
    "allowableValues": {
      "values": [
        "RACF",
        "TSS",
        "ACF2",
      ],
    },
    "description": "The ESM product on the target system",
    "group": "IDF Connection Options",
    "name": "esm",
    "type": "string",
  },
  {
    "aliases": [
      "l",
    ],
    "description": "The target JES system on which the command will be executed",
    "group": "IDF Connection Options",
    "name": "system",
    "type": "string",
  },
  {
    "aliases": [
      "r",
    ],
    "description": "The distributed identities registry",
    "group": "IDF Connection Options",
    "name": "registry",
    "type": "string",
  },
]
`;
